Updated audio stream route

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ media/
 test.mp3
 test2.mp3
 test3.mp3
+Summer Rain - Lo-Fi Hiphop ver (GlitchxCity feat. Sapphire).mp3
 
 # Secrets file
 config.json
