--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "ffprobe": "^1.1.2",
     "ffprobe-static": "^3.0.0",
+    "multer": "^1.4.2",
     "music-metadata": "^7.5.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
