--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/Matthew-Klawitter/SeafarersCafeRadio#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "ffprobe": "^1.1.2",
     "ffprobe-static": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "music-metadata": "^7.5.0",
     "mysql2": "^2.2.5",
